--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Goshen Campus Oasis Links</title>
+  <link rel="icon" href="assets\images\favicon.ico" type="image/x-icon">
+<link rel="icon" href="assets\images\favicon-32x32.png" type="image/png">
+
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Merriweather:wght@700&display=swap" rel="stylesheet" />
